// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gts_extractor > gjs files 1`] = `
[
  {
    "defaultMessage": "js getter with an id",
    "id": "getter-message",
  },
  {
    "defaultMessage": "js getter with no id",
    "id": "hdXT/o",
  },
  {
    "defaultMessage": "G'day!, from a secondary component in the same GJS file",
    "description": undefined,
    "id": "FmytR9",
  },
  {
    "defaultMessage": "in template",
    "description": "in template desc",
    "id": "7MCO2v",
  },
  {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
    "description": undefined,
    "id": "lMXYqa",
  },
  {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
    "description": undefined,
    "id": "lMXYqa",
  },
  {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
    "id": "mkhWoT",
  },
  {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
    "id": "mkhWoT",
  },
]
`;

exports[`gts_extractor > gts files 1`] = `
[
  {
    "defaultMessage": "js getter with an id",
    "id": "getter-message",
  },
  {
    "defaultMessage": "js getter with no id",
    "id": "hdXT/o",
  },
  {
    "defaultMessage": "hello from a secondary component in the same file",
    "description": undefined,
    "id": "o1wtct",
  },
  {
    "defaultMessage": "in template",
    "description": "in template desc",
    "id": "7MCO2v",
  },
  {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
    "description": undefined,
    "id": "lMXYqa",
  },
  {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
    "description": undefined,
    "id": "lMXYqa",
  },
  {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
    "id": "mkhWoT",
  },
  {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
    "id": "mkhWoT",
  },
]
`;
